<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:gravity="center"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/area"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/center"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/sign_in"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tap_here"
                    android:text="@string/tap_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/google"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/google_img"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/logo_google"/>

                <TextView
                    android:id="@+id/google_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/twitter"
                android:gravity="center"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/twitter_img"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/logo_twitter" />

                <TextView
                    android:id="@+id/twitter_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/facebook"
                android:gravity="center"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/facebook_img"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/logo_facebook" />

                <TextView
                    android:id="@+id/facebook_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook" />

            </LinearLayout>

            <ImageView
                android:id="@+id/login_img"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:visibility="invisible"
                android:background="@drawable/logo_login" />


            <TextView
                android:id="@+id/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:visibility="invisible"
                android:text="@string/email_and_password" />

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/phone"
                android:gravity="center"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/phone_img"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/logo_phone" />

                <TextView
                    android:id="@+id/phone_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_sms" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_grey"
            android:gravity="center_horizontal">

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/sign_in"
                android:textSize="16sp"
                android:layout_marginBottom="15dp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edit_text_background"
                android:elevation="6dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_margin="15dp"
                android:background="@drawable/edit_text_background"
                android:elevation="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/done"
                android:background="@drawable/card_black"
                android:text="@string/done"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/colorAccent"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</layout>


<!--

Password / mail
Google
Facebook
Twetter
Github
Phone

-->