<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/card_full_black"
    android:layout_margin="30dp"
    android:elevation="6dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/email_holder"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:elevation="6dp"
        android:background="@drawable/edit_text_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/password_holder"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:elevation="6dp"
        android:background="@drawable/edit_text_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/done"
        android:text="@string/done"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorAccent"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>