<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/method"
                tools:src="@drawable/logo_google"
                android:transitionName="provider"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <TextView
                android:id="@+id/info"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="11sp"
                android:layout_margin="10dp"
                tools:text="nikita.gordia@gmail.com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <EditText
            android:id="@+id/nickname"
            android:hint="@string/nickname"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textColorHint="@android:color/darker_gray"
            android:elevation="6dp"
            android:background="@drawable/edit_text_background_black"
            android:layout_weight="0"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/card_grey"
            android:layout_weight="0"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/photo_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <ImageView
                android:layout_margin="20dp"
                android:src="@drawable/user_photo_holder"
                android:id="@+id/photo"
                android:layout_width="170dp"
                android:layout_height="170dp" />


            <TextView
                android:id="@+id/done"
                android:background="@drawable/card_black"
                android:text="@string/done"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/colorAccent"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</layout>