<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/card_full_black"
            android:layout_width="match_parent"
            android:transitionName="post_body"
            android:paddingRight="13dp"
            android:paddingLeft="13dp"
            android:elevation="6dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="0"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nickname"
                    android:text="Nikita Gordia"
                    android:transitionName="nickname"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/photo"
                    android:src="@drawable/user_photo_holder"
                    android:transitionName="photo"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:scaleType="fitCenter"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@+id/date"
                    android:text="12 November, 2018"
                    android:transitionName="date"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@android:color/background_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <TextView
                android:id="@+id/content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/post_example"
                android:transitionName="content"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_weight="0"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/like"
                    android:text="17 Like"
                    android:transitionName="like"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginRight="3dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/view"
                    android:text="34 View"
                    android:transitionName="view"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginRight="3dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/comment"
                    android:text="3 Comment"
                    android:transitionName="comment"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginRight="3dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_weight="0"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/show_likes"
                android:padding="6dp"
                android:text="@string/show_likes"
                android:layout_weight="1"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/colorPrimaryDarkBlue"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/show_comments"
                android:padding="6dp"
                android:text="@string/show_comments"
                android:layout_weight="1"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/colorPrimaryDarkBlue"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>

</layout>
